force-app/main/default/objects/COBAddress__c/COBAddress__c.object-meta.xml
<CustomObject>
    <description>A structured address compatible with both QAS lookup results and manual entry by the prospect.</description>
    <label>COB Address</label>
    <nameField>
        <displayFormat>COBA-{00000000}</displayFormat>
        <label>COB Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COB Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>