force-app/main/default/objects/COBAddress__c/fields/AddressBuildingName__c.field-meta.xml
<CustomField>
    <fullName>AddressBuildingName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Building name (e.g. &quot;Polaris&quot;)</description>
    <label>Address Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>