force-app/main/default/objects/COBAddress__c/fields/AddressCity__c.field-meta.xml
<CustomField>
    <fullName>AddressCity__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>City or suburb (e.g. &quot;Melbourne&quot;)</description>
    <label>Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>