force-app/main/default/objects/COBAddress__c/fields/AddressDeliveryId__c.field-meta.xml
<CustomField>
    <fullName>AddressDeliveryId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The delivery identifier (DID) representing the immediate locale of the address</description>
    <label>Address Delivery Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>