force-app/main/default/objects/COBAddress__c/fields/AddressLatitude__c.field-meta.xml
<CustomField>
    <fullName>AddressLatitude__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The latitude part of the address&apos;s GPS coordinates</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>