force-app/main/default/objects/COBAddress__c/fields/AddressLevelNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressLevelNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Level number (e.g. &quot;Level 3&quot;)</description>
    <label>Address Level Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>