force-app/main/default/objects/COBAddress__c/fields/AddressPostcode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostcode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Post code (e.g. &quot;3001&quot;)</description>
    <label>Address Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>