force-app/main/default/objects/COBAddress__c/fields/AddressQASId__c.field-meta.xml
<CustomField>
    <fullName>AddressQASId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The globally unique identifier used to represent the address in the QAS service</description>
    <label>Address QAS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>