force-app/main/default/objects/COBAddress__c/fields/AddressResidenceNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressResidenceNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Residence/unit number (e.g. &quot;Unit 6&quot;)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Residence Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>