force-app/main/default/objects/COBAddress__c/fields/AddressResidenceType__c.field-meta.xml
<CustomField>
    <fullName>AddressResidenceType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Residence type (e.g. &quot;Apartment&quot;)</description>
    <label>Address Residence Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>