force-app/main/default/objects/COBAddress__c/fields/AddressState__c.field-meta.xml
<CustomField>
    <fullName>AddressState__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>A state, usually abbreviated (e.g. &quot;VIC&quot;)</description>
    <label>Address State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>