force-app/main/default/objects/COBAddress__c/fields/AddressStreetName__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetName__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Street name (e.g. &quot;Banksia&quot;)</description>
    <label>Address Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>