force-app/main/default/objects/COBAddress__c/fields/AddressStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Street number (e.g. &quot;82A&quot;)</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Address Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>