force-app/main/default/objects/COBAddress__c/fields/AddressStreetSuffix__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetSuffix__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>A street suffix, also known as &quot;post directional&quot; (e.g. &quot;North&quot;, as in &quot;Banksia Road North&quot;)</description>
    <label>Address Street Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>