force-app/main/default/objects/COBAddress__c/fields/AddressStreetType__c.field-meta.xml
<CustomField>
    <fullName>AddressStreetType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Street type (e.g. &quot;Avenue&quot;)</description>
    <label>Address Street Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>