force-app/main/default/objects/COBAddress__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>The type of the address, (e.g. `CURRENT`, `PREVIOUS`, `MAILING`)</description>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>