force-app/main/default/objects/COBAddress__c/fields/PersonaAddressType__c.field-meta.xml
<CustomField>
    <fullName>PersonaAddressType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>An address submitted by the user was either entered manually, or found through a Quick Address System (QAS) search</description>
    <externalId>true</externalId>
    <label>Persona Address Type</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>