force-app/main/default/objects/COBAddress__c/fields/PostalNumber__c.field-meta.xml
<CustomField>
    <fullName>PostalNumber__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Postal number, used for PO boxes</description>
    <label>Postal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>