force-app/main/default/objects/COBAddress__c/fields/PostalType__c.field-meta.xml
<CustomField>
    <fullName>PostalType__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>Postal type: e.g. PO Box</description>
    <label>Postal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>