force-app/main/default/objects/COBAddress__c/fields/QASAddress__c.field-meta.xml
<CustomField>
    <fullName>QASAddress__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Temporal</complianceGroup>
    <description>Specify if an address is a QAS address</description>
    <formula>IF(ISBLANK(AddressQASId__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QAS Address</label>
    <type>Checkbox</type>
</CustomField>