force-app/main/default/objects/COBAddress__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Temporal</complianceGroup>
    <description>UTC time when this address was collected</description>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>